--- a/campaign/templates/app/dashboard.html
+++ b/campaign/templates/app/dashboard.html
@@ -1,6 +1,14 @@
-{% extends "admin/base.html" %}
+{% extends "beta/base-site.html" %}
 
 {% block title %}Dashboard{% endblock %}
+
+{% block breadcrumbs %}
+{% endblock %}
+
+
+{% block header %}
+{% endblock %}
+
 
 {% block content %}
   <h1>Hello, Admin-Lookalike UI!</h1>
