--- a/campaign/templates/app/campaign/scheduele.html
+++ b/campaign/templates/app/campaign/scheduele.html
@@ -1,10 +1,10 @@
-    {% extends "base-app.html" %}
+ {% extends "app/campaign/campaign-base.html" %}
  
  {% block title %}Campaign schedule{% endblock %}
  
  
  
- {% block content %}     
+ {% block cmp-base-content %}     
      
      
      
