--- a/campaign/templates/app/campaign/campaign-leads.html
+++ b/campaign/templates/app/campaign/campaign-leads.html
@@ -1,10 +1,10 @@
- {% extends "base-app.html" %}
+ {% extends "app/campaign/campaign-base.html" %}
  
  {% block title %}Campaign Leads{% endblock %}
  
  
  
- {% block content %}     
+ {% block cmp-base-content %}     
      
      
      
@@ -14,28 +14,7 @@
   
   
   
-  
-  
-  
-  
-  
-  
-  <!-- Content -->
-      <div class="flex-1 flex flex-col overflow-y-auto bg-gray-50 p-8">
-        <!-- Top Nav & Actions -->
-        <div class="flex items-center justify-between">
-            <div role="tablist" class="tabs">
-                <a role="tab" class="tab h-auto pb-2 px-1 text-base text-gray-500 mx-4">Analytics</a>
-                <a role="tab" class="tab h-auto pb-2 px-1 text-base text-primary tab-active-underline border-primary">Leads</a>
-                <a role="tab" class="tab h-auto pb-2 px-1 text-base text-gray-500 mx-4">Sequences</a>
-                <a role="tab" class="tab h-auto pb-2 px-1 text-base text-gray-500 mx-4">Schedule</a>
-                <a role="tab" class="tab h-auto pb-2 px-1 text-base text-gray-500 mx-4">Options</a>
-            </div>
-            <div class="flex items-center gap-3">
-                <button class="btn bg-green-100 text-green-700 hover:bg-green-200 border-none h-10 min-h-10 rounded-lg px-4 text-sm"><i class="fa-solid fa-play mr-1 text-xs"></i>Resume campaign</button>
-                <button class="btn bg-white border border-base-300 btn-square h-10 min-h-10 w-10"><i class="fa-solid fa-ellipsis"></i></button>
-            </div>
-        </div>
+
 
         <!-- Toolbar -->
         <div class="flex items-center justify-between mt-8">
@@ -123,7 +102,7 @@
                 <button class="btn btn-sm bg-white border border-gray-300" disabled>No more to load</button>
             </div>
         </div>
-      </div>
+
 
 
 
