--- a/campaign/templates/app/campaign/dashboard.html
+++ b/campaign/templates/app/campaign/dashboard.html
@@ -1,41 +1,9 @@
- {% extends "base-app.html" %}
+ {% extends "app/campaign/campaign-base.html" %}
  
  {% block title %}Campaign Dashboard{% endblock %}
  
  
- 
- {% block content %}     
-     
-     
-     
-     
-     
-     
-     
-     
-     
-     
-     <!-- Content -->
-      <div class="flex-1 overflow-y-auto bg-gray-50 p-8">
-        <!-- Top Nav & Actions -->
-        <div class="flex items-center justify-between">
-            <div role="tablist" class="tabs">
-                <a role="tab" class="tab h-auto pb-2 px-1 text-base text-primary tab-active-underline border-primary">Analytics</a>
-                <a role="tab" class="tab h-auto pb-2 px-1 text-base text-gray-500 mx-4">Leads</a>
-                <a role="tab" class="tab h-auto pb-2 px-1 text-base text-gray-500 mx-4">Sequences</a>
-                <a role="tab" class="tab h-auto pb-2 px-1 text-base text-gray-500 mx-4">Schedule</a>
-                <a role="tab" class="tab h-auto pb-2 px-1 text-base text-gray-500 mx-4">Options</a>
-            </div>
-            <div class="flex items-center gap-3">
-                <button class="btn bg-green-100 text-green-700 hover:bg-green-200 border-none h-10 min-h-10 rounded-lg px-4 text-sm">
-                    <i class="fa-solid fa-play mr-1 text-xs"></i>
-                    Resume campaign
-                </button>
-                <button class="btn bg-white border border-base-300 btn-square h-10 min-h-10 w-10">
-                    <i class="fa-solid fa-ellipsis"></i>
-                </button>
-            </div>
-        </div>
+ {% block cmp-base-content %}     
 
         <!-- Status & Filters -->
         <div class="flex items-center justify-between mt-8">
@@ -106,7 +74,7 @@
                 <p class="text-sm text-gray-600">👋 Step analytics will appear here once the campaign is published</p>
             </div>
         </div>
-      </div>
+
 
 
 
