--- a/campaign/templates/app/campaign/options.html
+++ b/campaign/templates/app/campaign/options.html
@@ -1,35 +1,15 @@
-   {% extends "base-app.html" %}
+ {% extends "app/campaign/campaign-base.html" %}
  
  {% block title %}Campaign options{% endblock %}
  
  
  
- {% block content %}     
+ {% block cmp-base-content %}     
      
      
      
      
      
-  
-  
-  
-  
-  <!-- Content -->
-      <div class="flex-1 flex flex-col overflow-y-auto bg-gray-50 p-8">
-        <!-- Top Nav & Actions -->
-        <div class="flex items-center justify-between">
-            <div role="tablist" class="tabs">
-                <a role="tab" class="tab h-auto pb-2 px-1 text-base text-gray-500">Analytics</a>
-                <a role="tab" class="tab h-auto pb-2 px-1 text-base text-gray-500 mx-4">Leads</a>
-                <a role="tab" class="tab h-auto pb-2 px-1 text-base text-gray-500 mx-4">Sequences</a>
-                <a role="tab" class="tab h-auto pb-2 px-1 text-base text-gray-500 mx-4">Schedule</a>
-                <a role="tab" class="tab h-auto pb-2 px-1 text-base text-primary tab-active-underline border-primary">Options</a>
-            </div>
-            <div class="flex items-center gap-3">
-                <button class="btn bg-green-100 text-green-700 hover:bg-green-200 border-none h-10 min-h-10 rounded-lg px-4 text-sm"><i class="fa-solid fa-play mr-1 text-xs"></i>Resume campaign</button>
-                <button class="btn bg-white border border-base-300 btn-square h-10 min-h-10 w-10"><i class="fa-solid fa-ellipsis"></i></button>
-            </div>
-        </div>
 
         <!-- Options Container -->
         <div class="mt-6 w-full max-w-4xl mx-auto">
@@ -91,12 +71,17 @@
                 </div>
             </div>
 
-            <!-- Advanced Options Button -->
-            <div class="text-center mt-6">
-                 <button class="btn bg-white border-base-300">Show advanced options <i class="fa-solid fa-chevron-down ml-2 text-xs"></i></button>
-            </div>
-        </div>
-      </div>
+           <div class="flex justify-center mt-10 space-x-4">
+  <button class="btn btn-outline btn-primary">
+    <i class="fas fa-save mr-2"></i> Save
+  </button>
+  <button class="btn btn-primary">
+    <i class="fas fa-rocket mr-2"></i> Launch
+  </button>
+</div>
+
+</div>
+
 
 
 
