--- a/campaign/templates/app/campaign/partials/leads-table.html
+++ b/campaign/templates/app/campaign/partials/leads-table.html
@@ -121,7 +121,7 @@
                             <i class="fa-solid fa-ellipsis-vertical"></i>
                         </div>
                         <ul tabindex="0" class="dropdown-content z-[1] menu p-2 shadow bg-white rounded-box w-32 border border-gray-200">
-                            <li><a onclick="deleteLead({{ lead.id }})" class="text-red-600"><i class="fa-solid fa-trash mr-2"></i>Delete</a></li>
+                            <li><a onclick="deleteLead({{ lead.id }})" class="text-red-600 hover:bg-red-50"><i class="fa-solid fa-trash mr-2"></i>Delete</a></li>
                         </ul>
                     </div>
                 </td>
